// Copyright 2020 Google LLC.

// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at

//    http://www.apache.org/licenses/LICENSE-2.0

// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package gamefrontend;

import "messages.proto";

message ClientInfo {
	int32 id = 1;
	// Insert additional information for client information that may be relevant 
	// for example
	// repeated int32 game_modes = 2;
	// int32 latency = 3;
	// string region = 4;
}

message ClientRequest {
	ClientInfo info = 1;
}

message GameFrontendResponse {
	openmatch.Assignment assignment = 1;
}

service GameFrontendMMService {
	rpc FindMatch (ClientRequest) returns (GameFrontendResponse) {}
}

